# infra

./: .env.example  .gitignore  AUTOMATION_INTEGRATION_PLAN.md  Cargo.toml  INFRA_IMPLEMENTATION_REPORT.md  INFRA_VERIFICATION_REPORT.md  README.md  docker-compose.yml  package-lock.json  package.json
crates/infra-audit/: Cargo.toml
crates/infra-audit/src/: context.rs  event.rs  lib.rs  logger.rs  sink.rs
crates/infra-auth/: Cargo.toml
crates/infra-auth/src/: identity.rs  lib.rs  middleware.rs  permission.rs  policy.rs  session.rs
crates/infra-cache/: Cargo.toml
crates/infra-cache/src/: cache.rs  config.rs  error.rs  lib.rs  memory.rs
crates/infra-config/: Cargo.toml
crates/infra-config/src/: builder.rs  lib.rs  loader.rs  source.rs  validation.rs
crates/infra-crypto/: Cargo.toml
crates/infra-crypto/src/: cipher.rs  hash.rs  jwt.rs  lib.rs  sign.rs  wasm.rs
crates/infra-errors/: Cargo.toml
crates/infra-errors/src/: context.rs  error.rs  kinds.rs  lib.rs  retry.rs  testing.rs  wasm.rs
crates/infra-fs/: Cargo.toml
crates/infra-fs/src/: lib.rs  ops.rs  path.rs  temp.rs
crates/infra-http/: Cargo.toml
crates/infra-http/src/: client.rs  lib.rs  middleware.rs  request.rs  response.rs  server.rs
crates/infra-id/: Cargo.toml
crates/infra-id/src/: lib.rs
crates/infra-json/: Cargo.toml
crates/infra-json/src/: lib.rs
crates/infra-llm-client/: Cargo.toml  README.md
crates/infra-llm-client/src/: error.rs  lib.rs  provider.rs  types.rs
crates/infra-llm-client/src/adapters/: mod.rs
crates/infra-mq/: Cargo.toml
crates/infra-mq/src/: lib.rs  memory.rs  message.rs  publisher.rs  queue.rs  subscriber.rs
crates/infra-otel/: Cargo.toml
crates/infra-otel/src/: config.rs  context.rs  init.rs  lib.rs  metrics.rs  span.rs
crates/infra-rate-limit/: Cargo.toml  README.md
crates/infra-rate-limit/src/: config.rs  error.rs  lib.rs  limiter.rs
crates/infra-rate-limit/src/strategies/: fixed_window.rs  mod.rs  sliding_window.rs  token_bucket.rs
crates/infra-retry/: Cargo.toml  README.md
crates/infra-retry/src/: executor.rs  lib.rs  policy.rs  strategies.rs
crates/infra-router/: Cargo.toml
crates/infra-router/src/: balancer.rs  gateway.rs  handler.rs  lib.rs  matcher.rs  route.rs
crates/infra-schema/: Cargo.toml
crates/infra-schema/src/: builder.rs  lib.rs  types.rs  validator.rs
crates/infra-sim/: Cargo.toml
crates/infra-sim/src/: chaos.rs  clock.rs  lib.rs  mock.rs  scenario.rs
crates/infra-vector/: Cargo.toml
crates/infra-vector/src/: embedding.rs  index.rs  lib.rs  similarity.rs  store.rs  traits.rs  types.rs  vector.rs  wasm.rs
docker/postgres/init/: 01-init-pgvector.sql  99-verify-extensions.sql
plans/: 01-specification.md  02-pseudocode.md  03-architecture.md  04-refinement.md  05-completion.md  INFRA_HARDENING_SPARC.md  PRE_INFRA_INTEGRATION_AUDIT.md
scripts/: env-setup.sh  verify-env-config.sh  verify-postgres-extensions.sh
sdk/ts/: package.json  tsconfig.json
sdk/ts/src/: errors.ts  index.ts
sdk/ts/src/crypto/: index.ts
sdk/ts/src/id/: index.ts
sdk/ts/src/json/: index.ts
