[workspace]
resolver = "2"
members = [
    "crates/infra-errors",
    "crates/infra-config",
    "crates/infra-json",
    "crates/infra-crypto",
    "crates/infra-id",
    "crates/infra-otel",
    "crates/infra-http",
    "crates/infra-fs",
    "crates/infra-schema",
    "crates/infra-mq",
    "crates/infra-audit",
    "crates/infra-sim",
    "crates/infra-vector",
    "crates/infra-auth",
    "crates/infra-router",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"
repository = "https://github.com/llm-dev-ops/infra"
authors = ["LLM-Dev-Ops Team"]
keywords = ["llm", "infrastructure", "devops", "ai"]
categories = ["development-tools", "web-programming"]

[workspace.dependencies]
# Internal crates
infra-errors = { path = "crates/infra-errors", version = "0.1.0" }
infra-config = { path = "crates/infra-config", version = "0.1.0" }
infra-json = { path = "crates/infra-json", version = "0.1.0" }
infra-crypto = { path = "crates/infra-crypto", version = "0.1.0" }
infra-id = { path = "crates/infra-id", version = "0.1.0" }
infra-otel = { path = "crates/infra-otel", version = "0.1.0" }
infra-http = { path = "crates/infra-http", version = "0.1.0" }
infra-fs = { path = "crates/infra-fs", version = "0.1.0" }
infra-schema = { path = "crates/infra-schema", version = "0.1.0" }
infra-mq = { path = "crates/infra-mq", version = "0.1.0" }
infra-audit = { path = "crates/infra-audit", version = "0.1.0" }
infra-sim = { path = "crates/infra-sim", version = "0.1.0" }
infra-vector = { path = "crates/infra-vector", version = "0.1.0" }
infra-auth = { path = "crates/infra-auth", version = "0.1.0" }
infra-router = { path = "crates/infra-router", version = "0.1.0" }

# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# OpenTelemetry (0.27)
opentelemetry = "0.27"
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.27", features = ["grpc-tonic"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-opentelemetry = "0.27"

# HTTP
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
tower = "0.4"

# Crypto
sha2 = "0.10"
blake3 = "1.5"
aes-gcm = "0.10"
argon2 = "0.5"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
jsonwebtoken = "9.2"
rand = "0.8"
base64 = "0.21"
hex = "0.4"
constant_time_eq = "0.3"

# Utilities
uuid = { version = "1.6", features = ["v4", "v7"] }
ulid = "1.1"
chrono = { version = "0.4", features = ["serde"] }
url = "2.5"
bytes = "1.5"
parking_lot = "0.12"
dashmap = "5.5"
crossbeam-channel = "0.5"

# WASM
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console", "Window", "Request", "RequestInit", "Response", "Headers"] }
serde-wasm-bindgen = "0.6"
getrandom = { version = "0.2", features = ["js"] }

# Testing
tokio-test = "0.4"

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"

[profile.release]
lto = true
codegen-units = 1
strip = true

[profile.release-wasm]
inherits = "release"
opt-level = "z"
