[package]
name = "infra-audit"
version = "0.1.0"
edition = "2021"
description = "Audit logging for LLM-Dev-Ops infrastructure"
license = "LicenseRef-LLM-Dev-Ops"
repository = "https://github.com/llm-dev-ops/infra"

[features]
default = []

[dependencies]
infra-errors = { path = "../infra-errors" }
infra-id = { path = "../infra-id" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
async-trait = "0.1"
tokio = { version = "1.40", features = ["sync"] }

[dev-dependencies]
tokio = { version = "1.40", features = ["rt-multi-thread", "macros"] }
