[package]
name = "infra-auth"
version = "0.1.0"
edition = "2021"
description = "Authentication and authorization for LLM-Dev-Ops infrastructure"
license = "LicenseRef-LLM-Dev-Ops"
repository = "https://github.com/llm-dev-ops/infra"

[features]
default = []
axum = ["dep:axum", "axum-extra"]
wasm = ["wasm-bindgen"]

[dependencies]
infra-errors = { path = "../infra-errors" }
infra-crypto = { path = "../infra-crypto" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
tokio = { version = "1.40", features = ["sync"] }

# Optional axum integration
axum = { version = "0.7", optional = true }
axum-extra = { version = "0.9", features = ["typed-header"], optional = true }

# WASM dependencies
wasm-bindgen = { version = "0.2", optional = true }

[dev-dependencies]
tokio = { version = "1.40", features = ["rt-multi-thread", "macros"] }
