[package]
name = "infra-cache"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Caching abstraction for LLM-Dev-Ops infrastructure"
keywords = ["cache", "memory", "distributed", "storage"]
categories = ["caching", "asynchronous"]
readme = "README.md"

[features]
default = ["std"]
std = []

[dependencies]
async-trait = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["time", "sync"] }
parking_lot = { workspace = true }
dashmap = { workspace = true }
infra-errors = { path = "../infra-errors" }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

[lints]
workspace = true
