[package]
name = "infra-config"
version = "0.1.0"
edition = "2021"
description = "Unified configuration management for LLM-Dev-Ops infrastructure"
license = "LicenseRef-LLM-Dev-Ops"
repository = "https://github.com/llm-dev-ops/infra"

[features]
default = []
wasm = ["wasm-bindgen", "js-sys"]

[dependencies]
infra-errors = { path = "../infra-errors" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
config = { version = "0.14", default-features = false, features = ["toml", "json"] }
thiserror = "1.0"
regex = "1.10"

# Optional WASM support
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }

[dev-dependencies]
tempfile = "3.10"
