[package]
name = "infra-crypto"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Cryptographic utilities for LLM-Dev-Ops infrastructure"
keywords = ["crypto", "encryption", "hashing", "llm"]
categories = ["cryptography"]

[features]
default = ["std"]
std = []
wasm = ["wasm-bindgen", "js-sys", "getrandom/js"]

[dependencies]
infra-errors = { workspace = true }
sha2 = { workspace = true }
blake3 = { workspace = true }
aes-gcm = { workspace = true }
argon2 = { workspace = true }
ed25519-dalek = { workspace = true }
jsonwebtoken = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
constant_time_eq = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }

# WASM
wasm-bindgen = { workspace = true, optional = true }
js-sys = { workspace = true, optional = true }
getrandom = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

[lints]
workspace = true
