[package]
name = "infra-fs"
version = "0.1.0"
edition = "2021"
description = "File system utilities for LLM-Dev-Ops infrastructure"
license = "LicenseRef-LLM-Dev-Ops"
repository = "https://github.com/llm-dev-ops/infra"

[features]
default = []
async = ["tokio/fs"]
watch = ["notify"]

[dependencies]
infra-errors = { path = "../infra-errors" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.40", features = ["rt"], optional = true }
notify = { version = "6.1", optional = true }
walkdir = "2.4"
glob = "0.3"
tempfile = "3.10"

[dev-dependencies]
tokio = { version = "1.40", features = ["rt-multi-thread", "macros"] }
