[package]
name = "infra-http"
version = "0.1.0"
edition = "2021"
description = "HTTP client and server utilities for LLM-Dev-Ops infrastructure"
license = "LicenseRef-LLM-Dev-Ops"
repository = "https://github.com/llm-dev-ops/infra"

[features]
default = ["client", "server"]
client = ["reqwest"]
server = ["axum", "tower", "tower-http"]
wasm = ["wasm-bindgen", "js-sys", "web-sys"]

[dependencies]
infra-errors = { path = "../infra-errors" }
infra-otel = { path = "../infra-otel" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
http = "1.0"
bytes = "1.5"
thiserror = "1.0"
async-trait = "0.1"
tokio = { version = "1.40", features = ["rt", "time"] }
tracing = "0.1"

# Client dependencies
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false, optional = true }

# Server dependencies
axum = { version = "0.7", optional = true }
tower = { version = "0.4", optional = true }
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip"], optional = true }

# WASM dependencies
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", features = ["Request", "Response", "Headers"], optional = true }

[dev-dependencies]
tokio = { version = "1.40", features = ["rt-multi-thread", "macros"] }
