[package]
name = "infra-mq"
version = "0.1.0"
edition = "2021"
description = "Message queue abstraction for LLM-Dev-Ops infrastructure"
license = "LicenseRef-LLM-Dev-Ops"
repository = "https://github.com/llm-dev-ops/infra"

[features]
default = ["memory"]
memory = []
redis = ["dep:redis"]
rabbitmq = ["lapin"]

[dependencies]
infra-errors = { path = "../infra-errors" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
thiserror = "1.0"
tokio = { version = "1.40", features = ["rt", "sync", "time"] }
tracing = "0.1"
uuid = { version = "1.10", features = ["v4"] }

# Optional backends
redis = { version = "0.27", features = ["tokio-comp"], optional = true }
lapin = { version = "2.3", optional = true }

[dev-dependencies]
tokio = { version = "1.40", features = ["rt-multi-thread", "macros"] }
