[package]
name = "infra-schema"
version = "0.1.0"
edition = "2021"
description = "Schema validation for LLM-Dev-Ops infrastructure"
license = "LicenseRef-LLM-Dev-Ops"
repository = "https://github.com/llm-dev-ops/infra"

[features]
default = []
wasm = ["wasm-bindgen", "js-sys"]

[dependencies]
infra-errors = { path = "../infra-errors" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonschema = "0.26"
thiserror = "1.0"
regex = "1.10"

# WASM dependencies
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }

[dev-dependencies]
serde_json = "1.0"
