[package]
name = "infra-sim"
version = "0.1.0"
edition = "2021"
description = "Simulation and testing utilities for LLM-Dev-Ops infrastructure"
license = "LicenseRef-LLM-Dev-Ops"
repository = "https://github.com/llm-dev-ops/infra"

[features]
default = []

[dependencies]
infra-errors = { path = "../infra-errors" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
tokio = { version = "1.40", features = ["sync", "time"] }
rand = "0.8"

[dev-dependencies]
tokio = { version = "1.40", features = ["rt-multi-thread", "macros"] }
